k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
